fix icon sizes and alignment

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
         display: flex;
       display: inline-flex;  
       justify-content: center;
-    width: 90%;
+    width: 100%;
     height: auto;
     padding: 25px 0px 90px 0;
     
@@ -19,7 +19,7 @@ body {
   justify-content: center;
         align-content: center;
         width:100%;
-        max-width: 1186px;
+        max-width: 1060px;
         font-family: 'Nunito Sans', sans-serif;
     font-size: 18px;
     font-weight: 500;
@@ -39,7 +39,7 @@ body {
     width: 100%;
     display: flex;
     align-self: flex-start;
-    padding-left: 25%;
+    padding-left: 0%;
   }
   
     
@@ -144,7 +144,7 @@ body {
     flex-grow: 0;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-content: center;
     align-items: center;
     gap: 12px;
@@ -164,12 +164,13 @@ body {
     padding: 8px 24px;
     border-radius: 8px;
     background-color: #070055;
+    cursor:pointer;
     transition: .2s ease-in-out 0s;
   }
-  .button-primary:hover {
-    cursor:pointer;
-    transform: scale(1.1);
-  }
+.button-primary:hover {
+  transform: scale(1.1);
+}
+
   .button-secondary {
     width: 100%;
     height: 28px;
@@ -181,10 +182,10 @@ body {
     padding: 8px 22px;
     border-radius: 8px;
     border: solid 2px #070055;
+    cursor:pointer;
     transition: .2s ease-in-out 0s;
   }
   .button-secondary:hover {
-    cursor:pointer;
     transform: scale(1.1);
   }
     .linkedIn {
@@ -1054,13 +1055,14 @@ padding-top: 30%;
   
     footer {
       display: flex;
+      
       justify-content: center;
       align-items:center;
       align-content: center;
       flex-direction: column;
   width: 100%;
   height: 100px;
-  padding-top: 170px;
+  margin: 200px 0 0 0;
     }
   
   .Line-1 {
@@ -1073,11 +1075,11 @@ padding-top: 30%;
     background-color: #999;
   }
   .Ambers-Portfolio-2022 {
-    width: 350px;
-    height: 15px;
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
-    padding: 15px 0px 0px 0px;
+    padding: 15px 0px 15px 0px;
     flex-grow: 0;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 12px;
@@ -1087,13 +1089,17 @@ padding-top: 30%;
     line-height: 1.2;
     letter-spacing: normal;
     text-align: center;
-    color: #1f1f1f;
+    color:#e1e0e0;
+  }
+
+  #endGame {
+    width:100%;
+    background-color:#1f1f1f;
   }
   .email {
-    width: 121px;
-  height: 55px;
-  padding-bottom: 10px;
-  padding-top: 25px;
+    width: 100%;
+  height: auto;
+  flex-direction: column;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 20px;
   font-weight: normal;
@@ -1103,11 +1109,11 @@ padding-top: 30%;
   letter-spacing: normal;
   text-align: left;
   color: #1f1f1f;
-    padding-left: 40px;
+    padding-left: 0px;
   }
   .location {
-    width: 180px;
-    height: 50px;
+    width: 100%;
+    height: auto;
     display: flex;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 20px;
@@ -1118,12 +1124,12 @@ padding-top: 30%;
     letter-spacing: normal;
     text-align: left;
     color: #1f1f1f;
-    padding-top: 25px;
-    padding-left:40px;
+    padding-top: 0px;
+    
   }
   .phone {
-    width: 153px;
-    height: 60px;
+    width: 100%;
+    height: auto;
     display: flex;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 20px;
@@ -1134,16 +1140,42 @@ padding-top: 30%;
     letter-spacing: normal;
     text-align: left;
     color: #1f1f1f;
-    padding-left: 40px;
-    padding-top: 10px;
+    padding-left: 0px;
+    padding-top: 0px;
   }
-  .contactIcons {
+
+  #emailLine {
     display: flex;
-    position: absolute;
-    padding: 129px 0px 0px 0px;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    gap: 10px;
+  
+
   }
+  #locationLine {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    gap: 10px;
+    padding-top: 20px;
   
+
+  }
+  #phoneLine {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    gap: 10px;
+    padding-top: 20px;
   
+
+  }
   .social {
     display: flex;
     flex-direction: row;
